feat: add asets

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <!--  purple night  -->
-    <color name="purple_light">#FF7F56D9</color>
+    <color name="purple_light">#7F56D9</color>
     <!--  purple night  -->
     <color name="purple_night">#9E77ED</color>
 
