feat: create component button enabled && disabled

--- a/app/src/main/res/drawable/stroke_button.xml
+++ b/app/src/main/res/drawable/stroke_button.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape>
-            <solid android:color="@color/white" />
-            <corners android:radius="6dp" />
-            <padding android:left="4dp" android:right="4dp" />
-        </shape>
-    </item>
-    <item>
-        <shape>
-            <solid android:color="@color/white" />
-            <stroke
-                android:width="3dp"
-                android:color="@color/purple_light" />
-            <corners android:radius="8dp" />
-            <padding android:left="4dp" android:right="4dp" />
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <solid android:color="@color/white" />
+
+    <stroke
+        android:color="@color/purple_light"
+        android:width="2dp" />
+
+    <padding
+        android:left="2dp"
+        android:top="2dp"
+        android:right="2dp"
+        android:bottom="2dp" />
+
+    <corners android:radius="8dp"/>
+
+</shape>
 
 
