--- a/app/src/main/res/drawable/stroke_button.xml
+++ b/app/src/main/res/drawable/stroke_button.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/white" />
 
@@ -9,10 +8,8 @@
         android:width="2dp" />
 
     <padding
-        android:left="2dp"
-        android:top="2dp"
-        android:right="2dp"
-        android:bottom="2dp" />
+        android:left="4dp"
+        android:right="4dp" />
 
     <corners android:radius="8dp"/>
 
