--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
@@ -12,48 +12,47 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/login_assets"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/titleTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintDimensionRatio="16:9"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/titleTextView"
+        style="@style/extra_large"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/login_button"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="parent"
-        style="@style/extra_large"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        />
+        android:text="@string/login_button"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/emailTextView"
+        style="@style/medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/text_email"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        style="@style/medium"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        />
+        android:text="@string/text_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailEditTextLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:alpha="1"
-        tools:alpha="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailTextView"
-        app:startIconDrawable="@drawable/ic_email">
+        app:startIconDrawable="@drawable/ic_email"
+        tools:alpha="1">
 
         <com.example.story_app.ui.customView.EmailEditText
             android:id="@+id/emailEditText"
@@ -63,29 +62,30 @@
             android:inputType="textEmailAddress"
             tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <TextView
         android:id="@+id/passwordTextView"
+        style="@style/medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/text_password"
-        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
-        app:layout_constraintStart_toStartOf="parent"
-        style="@style/medium"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        />
+        android:text="@string/text_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/passwordEditTextLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:alpha="1"
-        tools:alpha="1"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
-        app:startIconDrawable="@drawable/ic_lock">
+        app:startIconDrawable="@drawable/ic_lock"
+        tools:alpha="1">
 
         <com.example.story_app.ui.customView.PasswordEditText
             android:id="@+id/passwordEditText"
@@ -97,13 +97,13 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.example.story_app.ui.customView.CustomButton
+        android:id="@+id/btnLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:enabled="true"
+        android:text="@string/login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/login_button"
-        android:enabled="false"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
