--- a/app/src/main/res/layout/fragment_upload_story_page.xml
+++ b/app/src/main/res/layout/fragment_upload_story_page.xml
@@ -24,36 +24,22 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/cameraButton"
+        app:layout_constraintBottom_toTopOf="@+id/cameraXButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/placeholder" />
 
     <Button
-        android:id="@+id/cameraButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/camera"
-        app:layout_constraintBottom_toTopOf="@+id/etDesc"
-        app:layout_constraintEnd_toStartOf="@+id/cameraXButton"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/galleryButton" />
-
-    <Button
         android:id="@+id/cameraXButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="@string/camera_x"
-        app:layout_constraintBottom_toBottomOf="@+id/cameraButton"
+        android:text="@string/camera"
+        app:layout_constraintBottom_toTopOf="@+id/etDesc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/cameraButton"
-        app:layout_constraintTop_toTopOf="@+id/cameraButton" />
+        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />
 
     <Button
         android:id="@+id/galleryButton"
@@ -63,11 +49,10 @@
         android:elevation="2dp"
         android:scaleType="fitCenter"
         android:text="@string/galery"
-        app:layout_constraintBottom_toBottomOf="@+id/cameraButton"
-        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
+        app:layout_constraintBottom_toTopOf="@+id/etDesc"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/cameraButton" />
+        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/etDesc"
