animation property welcome page

--- a/app/src/main/res/layout/fragment_welcome_page.xml
+++ b/app/src/main/res/layout/fragment_welcome_page.xml
@@ -29,6 +29,8 @@
         android:text="@string/welcome_to_the_storyku"
         style="@style/extra_large"
         android:textAlignment="center"
+        android:alpha="0"
+        tools:alpha="1"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +43,8 @@
         android:layout_height="wrap_content"
         android:text="@string/storyku_desc"
         style="@style/medium"
+        android:alpha="0"
+        tools:alpha="1"
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +57,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/login_button"
+        android:alpha="0"
+        tools:alpha="1"
         app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,6 +74,8 @@
         android:layout_marginTop="16dp"
         android:contentDescription="@string/register_button"
         android:text="@string/register_button"
+        android:alpha="0"
+        tools:alpha="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
