--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -28,6 +28,8 @@
         android:text="@string/login_button"
         android:textAlignment="center"
         android:textStyle="bold"
+        android:alpha="0"
+        tools:alpha="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -40,6 +42,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/text_email"
+        android:alpha="0"
+        tools:alpha="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
@@ -50,7 +54,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:alpha="1"
+        android:alpha="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailTextView"
@@ -73,6 +77,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="@string/text_password"
+        tools:alpha="1"
+        android:alpha="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />
@@ -82,7 +88,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:alpha="1"
+        android:alpha="0"
         android:layout_margin="16dp"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,6 +112,8 @@
         android:layout_height="wrap_content"
         android:enabled="true"
         android:text="@string/login_button"
+        tools:alpha="1"
+        android:alpha="0"
         android:layout_margin="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
