--- a/app/src/main/res/layout/story_card.xml
+++ b/app/src/main/res/layout/story_card.xml
@@ -22,6 +22,7 @@
             android:layout_height="210dp"
             android:contentDescription="@string/desc_story_image"
             android:scaleType="centerCrop"
+            android:transitionName="image"
             tools:src="@tools:sample/avatars"
             />
         <TextView
@@ -30,6 +31,7 @@
             android:layout_height="wrap_content"
             style="@style/large"
             android:textStyle="bold"
+            android:transitionName="title"
             tools:text="@tools:sample/lorem"
             android:layout_marginHorizontal="16dp"
             />
@@ -42,6 +44,7 @@
             tools:text="@tools:sample/lorem/random"
             android:maxLines="1"
             android:ellipsize="end"
+            android:transitionName="desc"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="16dp"
             />
