--- a/app/src/main/res/layout/fragment_detail_story_page.xml
+++ b/app/src/main/res/layout/fragment_detail_story_page.xml
@@ -19,7 +19,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
+            tools:src="@tools:sample/avatars"
+            />
 
         <TextView
             android:id="@+id/tvTitle"
