--- a/app/src/main/res/values-in/string.xml
+++ b/app/src/main/res/values-in/string.xml
@@ -42,4 +42,6 @@
     <string name="desc">Deskripsi</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="maps">maps</string>
+    <string name="retry">coba lagi</string>
+
 </resources>
